# mudclient-rs

./: .gitignore  Cargo.toml  README.md  calculate_width.py  example_script.lua  identify_chars.py  ikkoku_1771089186.txt  ikkoku_1771123253.txt  ikkoku_1771124686.txt  itemfarm_1771088873.txt  itemfarm_1771089101.txt  itemfarm_1771114421.txt  itemfarm_1771117557.txt  itemfarm_1771120207.txt  map_gen.py  map_output.mermaid  mud_log_1768729455.txt  mud_log_1768729921.txt  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt
.agent/rules/: rust-simple.md  rust_style.md
.agent/workflows/: pr_review.md
.cargo/: config.toml
.github/workflows/: build.yml
crates/mudcore/: Cargo.toml
crates/mudcore/src/: alias.rs  debug_log.rs  lib.rs  logger.rs  paths.rs  script.rs  speedwalk.rs  trigger.rs  window.rs
crates/mudcore/src/buffer/: mod.rs
crates/mudcore/src/encoding/: mod.rs
crates/mudcore/src/map/: mod.rs  room.rs
crates/mudcore/src/telnet/: client.rs  mod.rs  protocol.rs
crates/mudgui/: Cargo.toml
crates/mudgui/src/: ansi.rs  app.rs  assets.rs  config.rs  main.rs  session.rs
data/: skills_db.json
docs/: Scripting_and_Commands.md  Scripts.md
docs/7777/: 7777 (1).txt  7777.doc  7777Quest (1)1.docm  7777Quest (1)12.txt  7777Quest.docm  7777Quest.txt  7777_Full_Guide_macOS.md
logs/: default_1769186559.txt  default_1769186576.txt  default_1769187533.txt  default_1769218145.txt  default_1769218257.txt  default_1769257702.txt  default_1769260033.txt  default_1769260084.txt  default_1769260233.txt  default_1769260653.txt  default_1769261275.txt  default_1769264928.txt  default_1769264991.txt  default_1769266420.txt  default_1769266847.txt  default_1769266983.txt  default_1769267311.txt  mud_log_1768729059.txt  mud_log_1768730031.txt  mud_log_1768730109.txt  mud_log_1768741201.txt  mud_log_1768746784.txt  mud_log_1768747021.txt  mud_log_1768747253.txt  mud_log_1768748479.txt  mud_log_1768750426.txt  mud_log_1768753239.txt  mud_log_1768754361.txt  mud_log_1768754495.txt  mud_log_1768754621.txt  mud_log_1768755018.txt  mud_log_1768755163.txt  mud_log_1768806305.txt  mud_log_1768837311.txt  mud_log_1768881748.txt  mud_log_1768888328.txt  mud_log_1768888611.txt  mud_log_1768888638.txt  mud_log_1768896502.txt  mud_log_1768898125.txt  (+21 more)
packaging/macos/: Info.plist  build-app.sh
scripts/: autocast.lua  benumb.lua  combat.lua  help.lua  ikkoku_quest.lua  itemfarm.lua  memcalc.lua  mob_finder.lua  poker_quest.lua  practice.lua  room_display.lua  skillplanner.lua  smurf_quest.lua  ticker.lua  utils.lua  verify_folding.lua
scripts/modules/: MudCombat.lua  MudExplorer.lua  MudNav.lua  MudUtils.lua
scripts/tests/: mock_mud.lua  test_combat.lua  test_explorer.lua  test_ikkoku_integration_real.lua  test_ikkoku_quest.lua  test_itemfarm.lua  test_mob_finder.lua  test_nav.lua  test_room_id.lua  test_runner.lua  test_utils.lua
